# delete-Discord-Messages

./: CMakeLists.txt  README.md  dcWebHook.cpp  dcWebHook.h  deletion.cpp  deletion.h  fetcher.cpp  fetcher.h  main.cpp  main.h
